# rabobank-workshop-genai

./: .gitignore  1 - Explore Graph.ipynb  1 - Parse, Chunk and Load Documents.ipynb  2 - Create Vector Index.ipynb  2 - Extract Definitions.ipynb  3 - Create Vector Index.ipynb  3 - Explore Graph.ipynb  3 - Graph Analytics.ipynb  4 - Explore Graph.ipynb  4 - RAG Chatbot.ipynb  5 - Agent.ipynb  5 - GraphRAG Agent.ipynb  5 - RAG Chatbot.ipynb  6 - GraphRAG Agent.ipynb  99 - Agent.ipynb  README.md  credentials_temp.env  pyproject.toml
create_graph/:  Parse, Chunk and Load Documents.ipynb  Extract Definitions.ipynb
dumps/: README.md
