[project]
name = "rabobank-workshop-genai"
version = "0.1.0"
description = ""
authors = [
    {name = "erikbijl"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "langchain (>=0.3.24,<0.4.0)",
    "langchain-openai (>=0.3.15,<0.4.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "neo4j (>=5.28.1,<6.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "graphdatascience (>=1.14,<2.0)",
    "openai (>=1.76.2,<2.0.0)",
    "langchain-community (>=0.3.23,<0.4.0)",
    "pypdf (>=5.4.0,<6.0.0)",
    "gradio (>=5.29.0,<6.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "langgraph (>=0.4.5,<0.5.0)",
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
